<resources>
    <string name="app_name">MKD</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Доборый день "</string>
    <string name="invalid_username">Некорретное имя пользователя</string>
    <string name="invalid_password">Пароль больше 5 символов</string>
    <string name="login_failed">"Неправильные данные"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_book">Добавить</string>
    <string name="address">Адрес объекта</string>
    <string name="houseNumber">Номер дома</string>
    <string name="houseBlock">Корпус</string>
    <string name="seria">Серия проекта</string>
    <string name="year">Год</string>
    <string name="square">Площадь</string>
    <string name="houseDoorsCount">Подъезды</string>
    <string name="minFloorCount">Этажи (мин)</string>
    <string name="maxFloorCount">Этажи (макс)</string>
    <string name="accountsCount">Количестов л/с</string>
    <string name="personsCount">Количество проживающих</string>
    <string name="flatsCount">Количество квартир</string>
    <string name="roomsCount">Количество нежилых</string>
    <string name="areaSquare">Площадь территории</string>
    <string name="firstPrivatisationDate">Дата приватизации</string>
    <string name="title">Заголовок</string>
    <string name="author_name">Author name</string>
    <string name="genre_name">Genre name</string>
    <string name="change_ttile">Редактирование</string>
    <string name="repair_title">Капитальные ремонт</string>
    <string name="substructure">Фундамент</string>
    <string name="facade">Фасад</string>
    <string name="roof">Крыша</string>
    <string name="elevator">Лифтовое оборудование</string>
    <string name="energy">Электроснабжение</string>
    <string name="heating">Теплоснабжение</string>
    <string name="watter">Холодное водоснабжение</string>
    <string name="hotWatter">Горячее водоснабжение</string>
    <string name="watterOut">Водоотведение</string>
    <string name="other">Иное</string>
    <string name="save">Сохранить</string>
    <string name="comm_title">Инженерные сети</string>

</resources>
