<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.ChangeMkdFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/comm_title"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_recycler_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/heating"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_heating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/hotWatter"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_hot_watter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/watter"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_watter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="italic"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_btn_bck"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>