<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.ChangeMkdFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/comm_title"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_recycler_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/substructure"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_substructure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/substructure"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/facade"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_facade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="@string/facade"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/roof"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_roof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/roof"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/elevator"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_elevator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/elevator"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/energy"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_energy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/energy"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/heating"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_heating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/heating"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/watter"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_watter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/watter"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/hotWatter"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_hot_watter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/hotWatter"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/watterOut"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/et_watter_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/watterOut"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/other"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/other"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_btn_bck"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>